# baresip-apps

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml
cmake/: FindBARESIP.cmake  FindGST.cmake  modules.cmake
docs/examples/: config
mk/: mod.mk  modules.mk
modules/auloop/: CMakeLists.txt  auloop.c
modules/autotest/: CMakeLists.txt  autotest.c  module.mk
modules/b2bua/: CMakeLists.txt  b2bua.c
modules/calltimer/: CMakeLists.txt  calltimer.c
modules/carddav/: CMakeLists.txt  carddav.c
modules/ebuacip/: ebuacip.c
modules/fvad/: CMakeLists.txt  fvad.c
modules/intercom/: CMakeLists.txt  events.c  iccustom.c  iccustom.h  ichidden.c  ichidden.h  incoming.c  intercom.c  intercom.h  module.mk
modules/kaoptions/: CMakeLists.txt  kaoptions.c  module.mk
modules/multicast/: multicast.c  multicast.h  player.c  receiver.c  sender.c  source.c
modules/parcall/: CMakeLists.txt  parcall.c
modules/qualify/: CMakeLists.txt  qualify.c
modules/redirect/: CMakeLists.txt  redirect.c
modules/rtsp/: CMakeLists.txt  rtsp.c
modules/vidloop/: CMakeLists.txt  vidloop.c
